Fix word-wrap and font-size of navbar

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -48,7 +48,7 @@
         }
         &__p{
             margin-bottom: 0.3em;
-            word-wrap: break-word;
+            word-wrap: break-spaces;
         }
     }
 }
